Update website: remove TERN mentions, update heading, enlarge hero image, and update favicon link

--- a/get-started.html
+++ b/get-started.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get started with your e-bike subscription in NYC. View available bikes and start your subscription today.">
-    <title>Get Started | from0to2 - E-bike Subscription NYC</title>
+    <title>Get Started | Cargo Bike Leasing NYC | from0to2.com</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
     <!-- Navigation -->
@@ -35,44 +36,44 @@
     <section class="bike-showcase">
         <div class="container">
             <h2 class="section-title">Available E-Bikes</h2>
-            <p class="section-subtitle">Select from our premium TERN e-bike selection. All-inclusive subscriptions starting at $225/month.</p>
+            <p class="section-subtitle">Select from our premium e-bike selection. All-inclusive subscriptions starting at $225/month.</p>
             <div class="bike-grid">
-                <a href="tern-gsd.html" class="bike-card">
+                <a href="gsd.html" class="bike-card">
                     <div class="bike-image-container">
-                        <img src="images/tern-gsd.jpg" alt="TERN GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <img src="images/gsd.jpg" alt="GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                         <span class="available-badge">Available</span>
                         <div class="bike-image-placeholder" style="display: none;">
-                            <span>TERN GSD</span>
+                            <span>GSD</span>
                         </div>
                     </div>
                     <div style="padding: 1.5rem 1.5rem 0.5rem;">
-                        <h3>TERN GSD</h3>
+                        <h3>GSD</h3>
                         <p>Perfect for families and heavy loads</p>
                     </div>
                 </a>
-                <a href="tern-hsd.html" class="bike-card">
+                <a href="hsd.html" class="bike-card">
                     <div class="bike-image-container">
-                        <img src="images/tern-hsd.jpg" alt="TERN HSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <img src="images/hsd.jpg" alt="HSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                         <div class="out-of-stock-banner">Out of Stock</div>
                         <div class="bike-image-placeholder" style="display: none;">
-                            <span>TERN HSD</span>
+                            <span>HSD</span>
                         </div>
                     </div>
                     <div style="padding: 1.5rem 1.5rem 0.5rem;">
-                        <h3>TERN HSD</h3>
+                        <h3>HSD</h3>
                         <p>Compact yet powerful urban e-bike</p>
                     </div>
                 </a>
-                <a href="tern-quick-haul.html" class="bike-card">
+                <a href="quick-haul.html" class="bike-card">
                     <div class="bike-image-container">
-                        <img src="images/tern-quick-haul.webp" alt="TERN Quick Haul E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <img src="images/quick-haul.webp" alt="Quick Haul E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                         <div class="out-of-stock-banner">Out of Stock</div>
                         <div class="bike-image-placeholder" style="display: none;">
-                            <span>TERN Quick Haul</span>
+                            <span>Quick Haul</span>
                         </div>
                     </div>
                     <div style="padding: 1.5rem 1.5rem 0.5rem;">
-                        <h3>TERN Quick Haul</h3>
+                        <h3>Quick Haul</h3>
                         <p>Lightweight and agile for city commuting</p>
                     </div>
                 </a>
