--- a/gsd.html
+++ b/gsd.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="TERN GSD e-bike available for subscription in NYC. Premium e-bike perfect for families and heavy loads.">
-    <title>TERN GSD | from0to2 - E-bike Subscription NYC</title>
+    <meta name="description" content="GSD e-bike available for subscription in NYC. Premium e-bike perfect for families and heavy loads.">
+    <title>GSD | Cargo Bike Leasing NYC | from0to2.com</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
     <!-- Navigation -->
@@ -25,16 +26,16 @@
     <section class="hero">
         <div class="hero-container">
             <div class="hero-image">
-                <img src="images/tern-gsd.jpg" alt="TERN GSD E-bike" class="hero-bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                <img src="images/gsd.jpg" alt="GSD E-bike" class="hero-bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <span class="available-badge">Available</span>
                 <div class="image-placeholder bike-hero" style="display: none;">
                     <div class="placeholder-content">
-                        <p>TERN GSD Image</p>
+                        <p>GSD Image</p>
                     </div>
                 </div>
             </div>
             <div class="hero-content">
-                <h1 class="hero-title">TERN GSD</h1>
+                <h1 class="hero-title">GSD</h1>
                 <p class="hero-subtitle">Perfect for families and heavy loads. Premium e-bike designed for safety, comfort, and serious carrying power.</p>
             </div>
         </div>
@@ -44,8 +45,8 @@
     <section class="bike-showcase">
         <div class="container">
             <div style="max-width: 800px; margin: 0 auto;">
-                <h2 class="section-title">About the TERN GSD</h2>
-                <p class="section-subtitle">The TERN GSD is our flagship e-bike, designed for families and those who need to carry heavy loads. With its longtail design and powerful electric motor, it's perfect for school runs, grocery shopping, and daily commuting.</p>
+                <h2 class="section-title">About the GSD</h2>
+                <p class="section-subtitle">The GSD is our flagship e-bike, designed for families and those who need to carry heavy loads. With its longtail design and powerful electric motor, it's perfect for school runs, grocery shopping, and daily commuting.</p>
             </div>
         </div>
     </section>
@@ -53,7 +54,7 @@
     <!-- Inquiry Form -->
     <section class="pricing">
         <div class="container">
-            <h2 class="section-title">Interested in the TERN GSD?</h2>
+            <h2 class="section-title">Interested in the GSD?</h2>
             <p class="section-subtitle">Fill out the form below and we'll get in touch with you to start your subscription.</p>
             <div id="form-message" class="form-message"></div>
             <form id="gsd-form" class="bike-form">
@@ -69,7 +70,7 @@
                     <label for="message">Message (Optional)</label>
                     <textarea id="message" name="message" placeholder="Tell us about your needs or ask any questions..."></textarea>
                 </div>
-                <input type="hidden" id="bike-model" name="bike_model" value="TERN GSD">
+                <input type="hidden" id="bike-model" name="bike_model" value="GSD">
                 <input type="hidden" id="status" name="status" value="Available">
                 <input type="hidden" id="timestamp" name="timestamp">
                 <input type="hidden" id="referrer" name="referrer">
