--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="E-bike subscription in NYC. Premium TERN e-bikes with all-inclusive service, starting at $225/month. Flexible month-to-month subscriptions.">
-    <title>from0to2 - E-bike Subscription NYC | Premium E-bikes, Created to Carry</title>
+    <meta name="description" content="E-bike subscription in NYC. Premium e-bikes with all-inclusive service, starting at $225/month. Flexible month-to-month subscriptions.">
+    <title>Cargo Bike Leasing NYC | from0to2.com</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
     <!-- Navigation -->
@@ -23,13 +24,13 @@
     <section class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">MAKE EVERY JOURNEY A JOYRIDE</h1>
+                <h1 class="hero-title">THE FASTEST WAY TO YOUR HAPPY PLACE</h1>
                 <div class="hero-cta">
                     <a href="get-started.html" class="cta-button primary large">Get Started</a>
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/hero-bike.jpg?v=2" alt="Family riding TERN e-bike in NYC" class="hero-bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                <img src="images/hero-bike.jpg?v=2" alt="Family riding e-bike in NYC" class="hero-bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <div class="image-placeholder bike-hero" style="display: none;">
                     <div class="placeholder-content">
                         <p>Hero Image</p>
@@ -49,7 +50,7 @@
                 </div>
                 <div class="feature-item">
                     <h2>Premium E-bikes, Created to Carry</h2>
-                    <p>Offering TERN's industry-leading electric bikes, designed for safety, comfort, and serious carrying power.</p>
+                    <p>Offering industry-leading electric bikes, designed for safety, comfort, and serious carrying power.</p>
                 </div>
                 <div class="feature-item">
                     <h2>Customize With Accessories</h2>
@@ -95,28 +96,28 @@
             <p class="section-subtitle">Create the perfect setup for your electric bike. Whether you're commuting, carrying kids, hauling groceries, or biking with your pet, our customizable accessories have you covered.</p>
             <p class="section-subtitle">Our e-bikes and accessories are easy to swap out as needed. When you find the perfect custom mix of e-bike and attachments, you can switch from subscribing to owning. from0to2 bikes and accessories can be purchased together or separately for added convenience.</p>
             <div class="bike-grid">
-                <a href="tern-gsd.html" class="bike-card">
-                    <img src="images/tern-gsd.jpg" alt="TERN GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                <a href="gsd.html" class="bike-card">
+                    <img src="images/gsd.jpg" alt="GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="bike-image-placeholder" style="display: none;">
-                        <span>TERN GSD</span>
+                        <span>GSD</span>
                     </div>
-                    <h3>TERN GSD</h3>
+                    <h3>GSD</h3>
                     <p>Perfect for families and heavy loads</p>
                 </a>
-                <a href="tern-hsd.html" class="bike-card">
-                    <img src="images/tern-hsd.jpg" alt="TERN HSD E-bike - Woman with dog" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                <a href="hsd.html" class="bike-card">
+                    <img src="images/hsd.jpg" alt="HSD E-bike - Woman with dog" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="bike-image-placeholder" style="display: none;">
-                        <span>TERN HSD</span>
+                        <span>HSD</span>
                     </div>
-                    <h3>TERN HSD</h3>
+                    <h3>HSD</h3>
                     <p>Compact yet powerful urban e-bike</p>
                 </a>
-                <a href="tern-quick-haul.html" class="bike-card">
-                    <img src="images/tern-quick-haul.webp" alt="TERN Quick Haul E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                <a href="quick-haul.html" class="bike-card">
+                    <img src="images/quick-haul.webp" alt="Quick Haul E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="bike-image-placeholder" style="display: none;">
-                        <span>TERN Quick Haul</span>
+                        <span>Quick Haul</span>
                     </div>
-                    <h3>TERN Quick Haul</h3>
+                    <h3>Quick Haul</h3>
                     <p>Lightweight and agile for city commuting</p>
                 </a>
             </div>
@@ -158,7 +159,7 @@
                 <div class="step">
                     <div class="step-number">1</div>
                     <h3>Choose Your E-bike</h3>
-                    <p>Select from our premium TERN e-bike selection</p>
+                    <p>Select from our premium e-bike selection</p>
                 </div>
                 <div class="step">
                     <div class="step-number">2</div>
