Add storage options page and update pricing section on get-started page

--- a/get-started.html
+++ b/get-started.html
@@ -89,6 +89,7 @@
             <div class="pricing-card">
                 <div class="pricing-header">
                     <h3>Monthly Subscription</h3>
+                    <div style="margin-bottom: 0.5rem; color: var(--text-light); font-size: 0.875rem;">(starts at)</div>
                     <div class="price-display">
                         <span class="currency">$</span>
                         <span class="amount">225</span>
@@ -96,10 +97,10 @@
                     </div>
                 </div>
                 <ul class="pricing-features">
+                    <li><a href="storage-options.html" style="color: var(--primary-color); text-decoration: none; font-weight: 600;">✓ STORAGE OPTIONS!</a></li>
                     <li>✓ Premium e-bike</li>
-                    <li>✓ All-inclusive service</li>
+                    <li>✓ All-inclusive preventative maintenance and repairs</li>
                     <li>✓ Theft protection</li>
-                    <li>✓ 24/7 Rider Rescue</li>
                     <li>✓ Free delivery in NYC</li>
                     <li>✓ Month-to-month flexibility</li>
                     <li>✓ Option to purchase</li>
