Center storage header, update 'How to get your bike' section, improve image error handling

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <!-- How It Works -->
     <section class="how-it-works">
         <div class="container">
-            <h2 class="section-title">How Subscription Works</h2>
+            <h2 class="section-title">How to get your bike</h2>
             <div class="steps">
                 <div class="step">
                     <div class="step-number">1</div>
@@ -171,7 +171,7 @@
                 <div class="step">
                     <div class="step-number">3</div>
                     <h3>We Deliver</h3>
-                    <p>Free delivery and setup right to your door in NYC</p>
+                    <p>Free delivery and setup right to your door in NYC (in select neighborhoods)</p>
                 </div>
                 <div class="step">
                     <div class="step-number">4</div>
