--- a/storage-options.html
+++ b/storage-options.html
@@ -47,27 +47,27 @@
     <section class="bike-showcase">
         <div class="container">
             <div class="storage-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-top: 3rem;">
-                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer;">
-                    <img src="images/storage-1.jpg" alt="Modern bike storage units on urban street" class="storage-image" data-full="images/storage-1.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="bike-image-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600;">
+                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
+                    <img src="images/storage-1.jpg" alt="Modern bike storage units on urban street" class="storage-image" data-full="images/storage-1.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="handleImageError(this);">
+                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0;">
                         <span>Storage Unit 1</span>
                     </div>
                 </div>
-                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer;">
-                    <img src="images/storage-2.jpg" alt="OONEE bike storage unit with planter" class="storage-image" data-full="images/storage-2.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="bike-image-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600;">
+                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
+                    <img src="images/storage-2.jpg" alt="OONEE bike storage unit with planter" class="storage-image" data-full="images/storage-2.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="handleImageError(this);">
+                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0;">
                         <span>Storage Unit 2</span>
                     </div>
                 </div>
-                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer;">
-                    <img src="images/storage-3.jpg" alt="Cargo e-bike next to storage unit" class="storage-image" data-full="images/storage-3.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="bike-image-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600;">
+                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
+                    <img src="images/storage-3.jpg" alt="Cargo e-bike next to storage unit" class="storage-image" data-full="images/storage-3.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="handleImageError(this);">
+                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0;">
                         <span>Storage Unit 3</span>
                     </div>
                 </div>
-                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer;">
-                    <img src="images/storage-4.jpg" alt="Indoor bicycle parking facility" class="storage-image" data-full="images/storage-4.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="bike-image-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600;">
+                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
+                    <img src="images/storage-4.jpg" alt="Indoor bicycle parking facility" class="storage-image" data-full="images/storage-4.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="handleImageError(this);">
+                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0;">
                         <span>Storage Unit 4</span>
                     </div>
                 </div>
@@ -118,22 +118,69 @@
     </footer>
 
     <script>
+        // Handle image loading errors
+        function handleImageError(img) {
+            img.style.display = 'none';
+            const placeholder = img.nextElementSibling;
+            if (placeholder && placeholder.classList.contains('storage-placeholder')) {
+                placeholder.style.display = 'flex';
+            }
+        }
+
+        // Check if images exist and load them
+        function checkAndLoadImages() {
+            const images = document.querySelectorAll('.storage-image');
+            images.forEach(img => {
+                const imgElement = new Image();
+                imgElement.onload = function() {
+                    // Image exists and loaded successfully
+                    img.style.display = 'block';
+                    const placeholder = img.nextElementSibling;
+                    if (placeholder && placeholder.classList.contains('storage-placeholder')) {
+                        placeholder.style.display = 'none';
+                    }
+                };
+                imgElement.onerror = function() {
+                    // Image doesn't exist, show placeholder
+                    handleImageError(img);
+                };
+                imgElement.src = img.src;
+            });
+        }
+
         // Lightbox functionality
         const storageImages = document.querySelectorAll('.storage-image');
         const lightboxOverlay = document.getElementById('lightbox-overlay');
         const lightboxImage = document.getElementById('lightbox-image');
         const lightboxClose = document.getElementById('lightbox-close');
 
-        // Open lightbox when image is clicked
+        // Open lightbox when image is clicked (only if image is visible)
         storageImages.forEach(img => {
             img.addEventListener('click', function(e) {
-                e.stopPropagation();
-                const fullImageSrc = this.getAttribute('data-full');
-                const altText = this.getAttribute('alt');
-                lightboxImage.src = fullImageSrc;
-                lightboxImage.alt = altText;
-                lightboxOverlay.style.display = 'flex';
-                document.body.style.overflow = 'hidden';
+                if (this.style.display !== 'none' && this.complete && this.naturalHeight !== 0) {
+                    e.stopPropagation();
+                    const fullImageSrc = this.getAttribute('data-full');
+                    const altText = this.getAttribute('alt');
+                    lightboxImage.src = fullImageSrc;
+                    lightboxImage.alt = altText;
+                    lightboxOverlay.style.display = 'flex';
+                    document.body.style.overflow = 'hidden';
+                }
+            });
+        });
+
+        // Also allow clicking on the card to open lightbox if image exists
+        document.querySelectorAll('.storage-image-card').forEach(card => {
+            card.addEventListener('click', function(e) {
+                const img = this.querySelector('.storage-image');
+                if (img && img.style.display !== 'none' && img.complete && img.naturalHeight !== 0) {
+                    const fullImageSrc = img.getAttribute('data-full');
+                    const altText = img.getAttribute('alt');
+                    lightboxImage.src = fullImageSrc;
+                    lightboxImage.alt = altText;
+                    lightboxOverlay.style.display = 'flex';
+                    document.body.style.overflow = 'hidden';
+                }
             });
         });
 
@@ -161,6 +208,11 @@
             lightboxOverlay.style.display = 'none';
             document.body.style.overflow = '';
         }
+
+        // Check images on page load
+        window.addEventListener('load', function() {
+            checkAndLoadImages();
+        });
     </script>
 </body>
 </html>
