Simplify storage images code - remove complex error handling that may interfere with image display

--- a/storage-options.html
+++ b/storage-options.html
@@ -48,26 +48,26 @@
         <div class="container">
             <div class="storage-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-top: 3rem;">
                 <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
-                    <img src="images/storage-1.jpg" alt="Modern bike storage units on urban street" class="storage-image" data-full="images/storage-1.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;">
-                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0;">
+                    <img src="images/storage-1.jpg" alt="Modern bike storage units on urban street" class="storage-image" data-full="images/storage-1.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.onerror=null; this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0; z-index: 1;">
                         <span>Storage Unit 1</span>
                     </div>
                 </div>
                 <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
-                    <img src="images/storage-2.jpeg" alt="OONEE bike storage unit with planter" class="storage-image" data-full="images/storage-2.jpeg" style="width: 100%; height: 250px; object-fit: cover; display: block;">
-                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0;">
+                    <img src="images/storage-2.jpeg" alt="OONEE bike storage unit with planter" class="storage-image" data-full="images/storage-2.jpeg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.onerror=null; this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0; z-index: 1;">
                         <span>Storage Unit 2</span>
                     </div>
                 </div>
                 <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
-                    <img src="images/storage-3.png" alt="Cargo e-bike next to storage unit" class="storage-image" data-full="images/storage-3.png" style="width: 100%; height: 250px; object-fit: cover; display: block;">
-                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0;">
+                    <img src="images/storage-3.png" alt="Cargo e-bike next to storage unit" class="storage-image" data-full="images/storage-3.png" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.onerror=null; this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0; z-index: 1;">
                         <span>Storage Unit 3</span>
                     </div>
                 </div>
                 <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
-                    <img src="images/storage-4.jpeg" alt="Indoor bicycle parking facility" class="storage-image" data-full="images/storage-4.jpeg" style="width: 100%; height: 250px; object-fit: cover; display: block;">
-                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0;">
+                    <img src="images/storage-4.jpeg" alt="Indoor bicycle parking facility" class="storage-image" data-full="images/storage-4.jpeg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.onerror=null; this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0; z-index: 1;">
                         <span>Storage Unit 4</span>
                     </div>
                 </div>
@@ -124,17 +124,6 @@
         const lightboxImage = document.getElementById('lightbox-image');
         const lightboxClose = document.getElementById('lightbox-close');
 
-        // Handle image loading errors - show placeholder if image fails to load
-        storageImages.forEach(img => {
-            img.addEventListener('error', function() {
-                this.style.display = 'none';
-                const placeholder = this.nextElementSibling;
-                if (placeholder && placeholder.classList.contains('storage-placeholder')) {
-                    placeholder.style.display = 'flex';
-                }
-            });
-        });
-
         // Open lightbox when image is clicked
         storageImages.forEach(img => {
             img.addEventListener('click', function(e) {
@@ -152,7 +141,7 @@
         document.querySelectorAll('.storage-image-card').forEach(card => {
             card.addEventListener('click', function(e) {
                 const img = this.querySelector('.storage-image');
-                if (img && img.complete && img.naturalHeight !== 0) {
+                if (img) {
                     const fullImageSrc = img.getAttribute('data-full');
                     const altText = img.getAttribute('alt');
                     lightboxImage.src = fullImageSrc;
