Completely rebuild storage images section - remove all placeholders and error handling, use simple robust approach

--- a/storage-options.html
+++ b/storage-options.html
@@ -47,29 +47,17 @@
     <section class="bike-showcase">
         <div class="container">
             <div class="storage-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-top: 3rem;">
-                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
-                    <img src="images/storage-1.jpg" alt="Modern bike storage units on urban street" class="storage-image" data-full="images/storage-1.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.onerror=null; this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0; z-index: 1;">
-                        <span>Storage Unit 1</span>
-                    </div>
+                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative; min-height: 250px;">
+                    <img src="images/storage-1.jpg" alt="Modern bike storage units on urban street" class="storage-image" data-full="images/storage-1.jpg" style="width: 100%; height: 250px; object-fit: cover; display: block;">
                 </div>
-                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
-                    <img src="images/storage-2.jpeg" alt="OONEE bike storage unit with planter" class="storage-image" data-full="images/storage-2.jpeg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.onerror=null; this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0; z-index: 1;">
-                        <span>Storage Unit 2</span>
-                    </div>
+                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative; min-height: 250px;">
+                    <img src="images/storage-2.jpeg" alt="OONEE bike storage unit with planter" class="storage-image" data-full="images/storage-2.jpeg" style="width: 100%; height: 250px; object-fit: cover; display: block;">
                 </div>
-                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
-                    <img src="images/storage-3.png" alt="Cargo e-bike next to storage unit" class="storage-image" data-full="images/storage-3.png" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.onerror=null; this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0; z-index: 1;">
-                        <span>Storage Unit 3</span>
-                    </div>
+                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative; min-height: 250px;">
+                    <img src="images/storage-3.png" alt="Cargo e-bike next to storage unit" class="storage-image" data-full="images/storage-3.png" style="width: 100%; height: 250px; object-fit: cover; display: block;">
                 </div>
-                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative;">
-                    <img src="images/storage-4.jpeg" alt="Indoor bicycle parking facility" class="storage-image" data-full="images/storage-4.jpeg" style="width: 100%; height: 250px; object-fit: cover; display: block;" onerror="this.onerror=null; this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                    <div class="storage-placeholder" style="display: none; width: 100%; height: 250px; background: var(--accent-blue-grey); align-items: center; justify-content: center; color: white; font-weight: 600; position: absolute; top: 0; left: 0; z-index: 1;">
-                        <span>Storage Unit 4</span>
-                    </div>
+                <div class="storage-image-card" style="background: white; border-radius: 12px; overflow: hidden; box-shadow: var(--shadow); cursor: pointer; position: relative; min-height: 250px;">
+                    <img src="images/storage-4.jpeg" alt="Indoor bicycle parking facility" class="storage-image" data-full="images/storage-4.jpeg" style="width: 100%; height: 250px; object-fit: cover; display: block;">
                 </div>
             </div>
         </div>
