--- a/index.html
+++ b/index.html
@@ -13,10 +13,25 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="logo">
-                <img src="images/logo.svg" alt="from0to2 Logo" class="logo-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline-block';">
-                <span class="logo-text" style="display: none;">from0to2</span>
+                <a href="index.html">
+                    <img src="images/logo.svg" alt="from0to2 Logo" class="logo-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline-block';">
+                    <span class="logo-text" style="display: none;">from0to2</span>
+                </a>
             </div>
-            <a href="get-started.html" class="cta-button nav-cta">Get Started</a>
+            <div class="nav-right">
+                <a href="get-started.html" class="cta-button nav-cta">Get Started</a>
+                <button class="hamburger-menu" id="hamburger-menu" aria-label="Toggle menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+        </div>
+        <div class="mobile-menu" id="mobile-menu">
+            <a href="index.html">Home</a>
+            <a href="get-started.html">Get Started</a>
+            <a href="storage-options.html">Storage Options</a>
+            <a href="about-us.html">About Us</a>
         </div>
     </nav>
 
@@ -197,7 +212,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h4>from0to2</h4>
-                    <p>E-bike subscription made simple for NYC</p>
+                    <p><a href="about-us.html" style="color: var(--text-lighter); text-decoration: none;">About Us</a></p>
                 </div>
                 <div class="footer-section">
                     <h4>Contact</h4>
@@ -215,5 +230,32 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        // Hamburger menu functionality
+        const hamburgerMenu = document.getElementById('hamburger-menu');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        hamburgerMenu.addEventListener('click', function() {
+            hamburgerMenu.classList.toggle('active');
+            mobileMenu.classList.toggle('active');
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('click', function(e) {
+            if (!hamburgerMenu.contains(e.target) && !mobileMenu.contains(e.target)) {
+                hamburgerMenu.classList.remove('active');
+                mobileMenu.classList.remove('active');
+            }
+        });
+
+        // Close menu when clicking a link
+        mobileMenu.querySelectorAll('a').forEach(link => {
+            link.addEventListener('click', function() {
+                hamburgerMenu.classList.remove('active');
+                mobileMenu.classList.remove('active');
+            });
+        });
+    </script>
 </body>
 </html>
