Update GSD images to use gsd-01.jpeg as hero image

--- a/get-started.html
+++ b/get-started.html
@@ -53,7 +53,7 @@
             <div class="bike-grid">
                 <a href="gsd.html" class="bike-card">
                     <div class="bike-image-container">
-                        <img src="images/gsd.jpg" alt="GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <img src="images/gsd-01.jpeg" alt="GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                         <span class="available-badge">Available</span>
                         <div class="bike-image-placeholder" style="display: none;">
                             <span>GSD</span>
