--- a/gsd.html
+++ b/gsd.html
@@ -39,7 +39,7 @@
     <section class="hero">
         <div class="hero-container">
             <div class="hero-image">
-                <img src="images/gsd.jpg" alt="GSD E-bike" class="hero-bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                <img src="images/gsd-01.jpeg" alt="GSD E-bike" class="hero-bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                 <span class="available-badge">Available</span>
                 <div class="image-placeholder bike-hero" style="display: none;">
                     <div class="placeholder-content">
