--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <p class="section-subtitle">Our e-bikes and accessories are easy to swap out as needed. When you find the perfect custom mix of e-bike and attachments, you can switch from subscribing to owning. from0to2 bikes and accessories can be purchased together or separately for added convenience.</p>
             <div class="bike-grid">
                 <a href="gsd.html" class="bike-card">
-                    <img src="images/gsd.jpg" alt="GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                    <img src="images/gsd-01.jpeg" alt="GSD E-bike" class="bike-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                     <div class="bike-image-placeholder" style="display: none;">
                         <span>GSD</span>
                     </div>
