Update Enjoy the Ride section text and consolidate feature items from 4 to 3

--- a/index.html
+++ b/index.html
@@ -77,11 +77,7 @@
                 </div>
                 <div class="feature-item">
                     <h2>Make It Yours</h2>
-                    <p>Customize with accessories for school runs, commutes, and weekend adventures.</p>
-                </div>
-                <div class="feature-item">
-                    <h2>Flexibility Built In</h2>
-                    <p>Month-to-month with freedom to swap or purchase when you're ready.</p>
+                    <p>Customize with accessories for school runs, commutes, and weekend adventures. Month-to-month with freedom to swap or purchase when you're ready.</p>
                 </div>
             </div>
         </div>
