Update from0to2 to 0to2 in Enjoy the Ride section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="enjoy-content">
                 <h2 class="section-title">Enjoy the ride, we'll take care of the rest.</h2>
                 <p class="section-subtitle">Get your premium family cargo bike with all-inclusive service—everything you need for easy, flexible riding.</p>
-                <p>Your subscription membership includes theft protection and the option to purchase your family cargo bike when the time is right. Ride with confidence, knowing from0to2 has you covered every mile of the way.</p>
+                <p>Your subscription membership includes theft protection and the option to purchase your family cargo bike when the time is right. Ride with confidence, knowing 0to2 has you covered every mile of the way.</p>
                 <a href="#subscriptions" class="cta-button secondary">Explore Benefits</a>
             </div>
         </div>
