Update rotating words: change color to #e2452f, add left-to-right scroll transition, add 5 new words

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                         <span class="rotating-word">school</span>
                         <span class="rotating-word">the supermarket</span>
                         <span class="rotating-word">Prospect Park</span>
+                        <span class="rotating-word">your home</span>
+                        <span class="rotating-word">the playground</span>
+                        <span class="rotating-word">your best friend's birthday party</span>
+                        <span class="rotating-word">the children's museum</span>
+                        <span class="rotating-word">coney island</span>
                     </span>
                 </h1>
                 <div class="hero-cta">
