--- a/about-us.html
+++ b/about-us.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn more about from0to2 - Family cargo bike subscription service in NYC.">
-    <title>About Us | from0to2.com</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <meta name="description" content="Learn more about ridewhee - Family cargo bike subscription service in NYC.">
+    <title>About Us | ridewhee.com</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="images/favicon.png?v=1">
 </head>
@@ -14,7 +17,7 @@
         <div class="nav-container">
             <div class="logo">
                 <a href="index.html">
-                    <img src="images/logo.svg" alt="from0to2 Logo" class="logo-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline-block';">
+                    <img src="images/logowhee.png?v=20250101" alt="from0to2 Logo" class="logo-image">
                     <span class="logo-text" style="display: none;">from0to2</span>
                 </a>
             </div>
@@ -65,7 +68,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact</h4>
-                    <p>Email: info@from0to2.com</p>
+                    <p>Email: info@ridewhee.com</p>
                     <p>Serving New York City</p>
                 </div>
                 <div class="footer-section">
@@ -75,7 +78,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 from0to2.com. All rights reserved.</p>
+                <p>&copy; 2024 ridewhee.com. All rights reserved.</p>
             </div>
         </div>
     </footer>
